doc updated (mainly about CLR integration)

--- a/doc/bonsai.bib
+++ b/doc/bonsai.bib
@@ -117,3 +117,8 @@ pages = "179-194"
 title = "Expression Trees",
 note = "\url{http://msdn.microsoft.com/en-us/library/bb397951.aspx}"
 }
+
+@misc { prototype_based_programming,
+title = "Wikipedia - Prototype-based Programming",
+note = "\url{http://en.wikipedia.org/wiki/Prototype-based_programming}"
+}
