--- a/doc/bonsai.tex
+++ b/doc/bonsai.tex
@@ -3,17 +3,20 @@
 \usepackage[dvipsnames]{color}
 \usepackage{fancyvrb,fontspec,xunicode,xltxtra,hyperref,url,framed,verbatim}
 
+% stop breaking words into syllables too agressively
 \hyphenpenalty=5000
 \tolerance=1000
 
+% nicer fonts
 \setmainfont{Calluna}
 \setmonofont{Inconsolata}
 
 \definecolor{shadecolor}{named}{Gray}
 
+% title of the PDF document and link colors
 \hypersetup{pdftitle={Bonsai - Un limbaj dinamic funcțional peste DLR},citebordercolor={0.8 0 0},filebordercolor={0.8 0 0},linkbordercolor={0.8 0 0},menubordercolor={0.8 0 0},urlbordercolor={0.8 0 0},runbordercolor={0.8 0 0}}
 
-% include subsections in the TOC %
+% include subsections in the TOC
 \setcounter{tocdepth}{4}
 
 \title{Bonsai\\Un limbal dinamic funcțional peste DLR}
@@ -23,7 +26,7 @@
 
 \newcommand{\draft}{\textcolor{red}}
 
-% footnotes with symbols instead of numbers %
+% footnotes with symbols instead of numbers
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 
 % we don't use cedillas, so just redifine \c as \texttt
@@ -129,13 +132,13 @@ Scopul principal al \c{CallSite}-urilor este de a mări performanța legaturilor
 
 Un rezultat al rezolvării unui apel dinamic este reprezentat de o instanță a clasei \c{DynamicMetaObject}\cite{dynamic_meta_object}. Aceasta conține expresia LINQ\cite{linq_expressions} a apelului, tipul de date așteptat, valoarea la rulare a apelului (unde este cazul) și un set de \c{BindingRestrictions} care exprimă condițiile în care rezultatul este valid.
 
-Un \c{Binder} este o clasă responsabilă cu rezolvarea unuia sau mai multe tipuri de expresii dinamice, cum ar fi apeluri de funcții, apeluri de membri, operatori infix, etc și returnarea unei instanțe de \c{DynamicMetaObject} ca rezultat. Bindereler sunt specifice unui anumit limbaj, rolul lor fiind de a ajuta la implementarea semanticii acestuia.
+Un \c{Binder} este o clasă responsabilă cu rezolvarea unuia sau mai multe tipuri de expresii dinamice, cum ar fi apeluri de funcții, apeluri de membri, operatori infix, etc și returnarea unei instanțe de \c{DynamicMetaObject} ca rezultat. Binder-ele sunt specifice unui anumit limbaj, rolul lor fiind de a ajuta la implementarea semanticii acestuia.
 
 Pentru a rezolva apelurilor dinamice, un \c{Binder} trebuie să genereze o expresie LINQ asociată rezultatului și să returneze un \c{DynamicMetaObject} format din această expresie împreună cu un set de \c{BindingRestrictions}.
 
 \section{Arbori de expresii}
 
-Expresiile LINQ au fost introduse prima dată în versiunea 3.5 a .NET Framework\cite{expression_trees_35} și permit reprezentarea type-safe a anumitor "expresii" de cod managed, cum ar fi apelul unei metode sau o operație binară precum \c{a + 3}, într-un mod independent de limbaj. Expresiile sunt înstanțe de clase care moștenesc \c{System.Linq.Expressions.Expression}.
+Expresiile LINQ au fost introduse prima dată în versiunea 3.5 a .NET Framework\cite{expression_trees_35} și permit reprezentarea type-safe a anumitor „expresii” de cod managed, cum ar fi apelul unei metode sau o operație binară precum \c{a + 3}, într-un mod independent de limbaj. Expresiile sunt înstanțe de clase care moștenesc \c{System.Linq.Expressions.Expression}.
 
 Fragmentul următor de cod oferă un scurt exemplu de utilizare, mai precis generarea și compilarea la runtime a unei expresii lambda care primește un parametru \c{a} de tip \c{int} și întoarce valoarea sa incrementată cu \c{1} (\c{a + 1}).
 \begin{code}
@@ -251,7 +254,7 @@ Dacă tipul \c{target}-ului este o subclasă a \c{System.Delegate}, \c{BonsaiBin
 
 \subsection{Referențierea obiectelor CLR}
 
-Dacă \c{target} este un obiect CLR obișnuit non-dinamic și lista de argumente este vidă, binder-ul tratează apelul ca pe o "referențiere" și returnează expresia inițială (\c{target.Expression}). Altfel spus, un obiect obișnuit se evaluează la el însuși.
+Dacă \c{target} este un obiect CLR obișnuit non-dinamic și lista de argumente este vidă, binder-ul tratează apelul ca pe o „referențiere” și returnează expresia inițială (\c{target.Expression}). Altfel spus, un obiect obișnuit se evaluează la el însuși.
 
 \subsection{Apelarea primitivelor și invocarea membrilor obiectelor CLR}
 
@@ -322,7 +325,7 @@ Primitivele sunt utilizate pentru extinderea claselor deja existente din .NET Fr
 
 Capitolul \ref{ch:Primitives} include lista completă de primitive din Bonsai.
 
-\section{Invocarea membrilor obiectelor CLR}
+\section{Invocarea membrilor obiectelor CLR}\label{sec:invoking_clr_members}
 
 Pentru ca un apel dinamic să poate fi tratat de către binder ca un call static către o metodă sau proprietate CLR, următoarele condiții trebuie să fie îndeplinite:
 
@@ -531,21 +534,28 @@ Toate variabilele de mai sus vor avea tipul \c{List<object>}. Din acest motiv, c
 
 \begin{code}
 = .list [| 1 2 3 ]
+  -> [| 1 2 3 ]
 list .Add "string"
+  -> [| 1 2 3 "string" ]
 list .Add .simbol
+  -> [| 1 2 3 "string" .simbol ]
 \end{code}
 
-\subsection{Dictionare}
+\section{Dictionare}
 
-Dicționarele reprezintă cea de-a doua structură de date imlementată în standard. Identificatorul asociat este \c{\#}. Lista elementelor cuprinse între paranteze pătrate conține pe pozițiile impare cheile, iar pe cele pare valorile. Dacă numărul de elemente este impar, atunci o excepție va fi aruncată.
+Dicționarele reprezintă cea de-a doua structură de date imlementată în biblioteca standard. Identificatorul asociat este \c{\#}. Lista elementelor cuprinse între paranteze pătrate conține pe pozițiile impare cheile, iar pe cele pare valorile. Dacă numărul de elemente este impar, atunci o excepție va fi aruncată.
 
 Fragmentul următor oferă un exemplu de utilizare a dicționarelor:
 \begin{code}
 \# dictionar cu cheile 3 symboluri și valorile 3 numere
 = .dict [# .a 1 .b 3 .c 42 ]
+dict .a 
+  -> 1
+dict .c
+  -> 42
 
-# dictioar cu cheile numere și valorile stringuri
-= .dict2 [#
+# dictionar cu cheile numere și valorile stringuri
+= .weekdays [#
   1 "luni" 
   2 "marti" 
   3 "miercuri"
@@ -554,18 +564,13 @@ Fragmentul următor oferă un exemplu de utilizare a dicționarelor:
   6 "sambata"
   7 "duminica"
 ]
+weekdays 3
+  -> "miercuri"
+weekdays 9
+  -> "duminica"
 \end{code}
 
-Structurile de date pot fi de asemenea combinate cu orice adâncime, precum în următorul exemplul de cod care definește un dicționar de liste:
-\begin{code}
-= .listDict [#
-  .prime [| 2 3 5 7 11 13 17 ]
-  .odd [| 1 3 5 7 9 11 13 15 17 19 ]
-  .even [| 2 4 6 8 10 12 14 16 18 ]
-]
-\end{code}
-
-\subsection{Definirea unui nou tip de structuri de date}
+\section{Definirea unui nou tip de structuri de date}
 
 Pentru adăugarea unei sintaxe noi pentru o altă structură de date trebuie ales un identificator asociat nefolosit și definită o funcție care convertește lista de expresii dintre parantezele pătrate într-o instanță a structurii.
 
@@ -592,18 +597,42 @@ print (white .GetType)
   -> System.Drawing.Color
 \end{code}
 
+\section{Combinarea structurilor}
+
+O structură de date poate conține în lista de expresii alte structuri de date. Astfel se pot declara liste de dicționare, dicționare ale căror valori sunt liste, etc. De exemplu, următorul fragment de cod definește un dicționar de liste:
+\begin{code}
+= .listDict [#
+  .prime [| 2 3 5 7 11 13 17 ]
+  .odd [| 1 3 5 7 9 11 13 15 17 19 ]
+  .even [| 2 4 6 8 10 12 14 16 18 ]
+]
+\end{code}
+
+Acest mod de a combina structurile nu este limitat la liste și dicționare. Folosind structura pentru culori definită în secțiunea precedentă, putem defini un dicționar al culorilor astfel:
+\begin{code}
+= .basicColors [#
+  .white [rgb 255 255 255 ]
+  .black [rgb 0 0 0 ]
+  .red [rgb 255 0 0 ]
+  .green [rgb 0 255 0 ]
+  .blue [rgb 0 0 255 ]
+]
+print (basicColors .black)
+  -> Color [A=255, R=0, G=0, B=0]
+print (basicColors .green)
+  -> Color [A=255, R=0, G=255, B=0]
+\end{code}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Obiecte Bonsai}\label{ch:BonsaiFunction}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-
 \section{Symboluri}\label{sec:Symbols}
 
-Un simbol din Bonsai este foarte asemănător simbolurilor din Ruby\cite{ruby_symbols} și Lisp\cite{clhs_symbols}. Un simbol se comportă de cele mai multe ori ca un string. Diferența majoră constă în faptul că pentru orice string există o singură instanță a unui simbol cu acel string, ceea ce face compararea a două simboluri foarte rapidă. De asemenea, utilizarea unui simbol indică de cele mai multe ori folosirea metaprogrămarii.
+\draft{TODO: move or remove; this section does not belong here}
 
-Tipul la runtime al simbolurilor este \c{Microsoft.Scripting.Dynamic.SymbolId}.
+
+\draft{Un simbol din Bonsai este foarte asemănător simbolurilor din Ruby\cite{ruby_symbols} și Lisp\cite{clhs_symbols}. Un simbol se comportă de cele mai multe ori ca un string. Diferența majoră constă în faptul că pentru orice string există o singură instanță a unui simbol cu acel string, ceea ce face compararea a două simboluri foarte rapidă. De asemenea, utilizarea unui simbol indică de cele mai multe ori folosirea metaprogrămarii. Tipul la runtime al simbolurilor este \c{Microsoft.Scripting.Dynamic.SymbolId}.}
 
 \section{Blocuri}
 
@@ -682,9 +711,10 @@ print (a .+ b)
 \chapter{Bonsai și Programarea Orientată Obiect}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Spre deosebire de limbajele Io\cite{io} și SmallTalk\cite{smalltalk}, unde orice este un obiect, în Bonsai orice este o funcție. Mai mult, dacă în SmallTalk și Io orice expresie reprezintă trimiterea unui mesaj către un obiect, iar rezultatul tot un obiect, în Bonsai orice expresie este un apel de funcție, iar rezultatul tot o funcție.
+\draft{Spre deosebire de limbajele Io\cite{io} și SmallTalk\cite{smalltalk}, unde orice este un obiect, în Bonsai orice este o funcție. Mai mult, dacă în SmallTalk și Io orice expresie reprezintă trimiterea unui mesaj către un obiect, iar rezultatul tot un obiect, în Bonsai orice expresie este un apel de funcție, iar rezultatul tot o funcție.}
 
-Această diferență poate părea fundamentală, dar o funcție poate fi considerată generalizarea unui obiect. În secțiunile următoare vom vedea cum toate cele trei principii fundamentale OOP – moștenirea, încapsularea și polimorfismul – sunt „simulate” în Bonsai cu ajutorul funcțiilor.
+\draft{Această diferență poate părea fundamentală, dar o funcție poate fi considerată generalizarea unui obiect. În secțiunile următoare vom vedea cum multe dintre principiile programării orientate obiect pot fi „simulate” cu ajutorul funcțiilor și al convențiilor de nume.
+}
 
 \section{Paralela funcțional <-> OOP}
 
@@ -698,26 +728,29 @@ Acest cod Bonsai are același efect cu următorul cod C\#:
 \end{code}
 În cazul în care mesajul are mai mulți parametri, aceștia urmează după simbol:
 \begin{code}
-stringBuilder .Append " ultima parte "
+stringBuilder .Append " sfarsit"
 \end{code}
+\c{stringBuilder} este o variabilă ce conține instanța apelată, \c{Append} este mesajul trimis (și în cazul obiectelor CLR, numele metodei apelate) iar \c{" sfarsit"} este unicul parametru trimis funcției.
 
-Moștenirea poate fi simulată printr-o funcție care este definită doar pentru un set de pattern-uri peste parametri, apelurile cu alți parametri fiind redirectate către o alta funcție (analogul clasei de bază).
+Tratarea mesajelor în acest fel poate părea primitivă și greoaie, dar în practică nu se face niciodată o tratare manuală (de tip \texttt{switch/case}): toate operațiile OOP sunt abstractizate printr-un set de funcții incluse în biblioteca standard a limbajului.
 
-Tratarea mesajelor în acest fel poate părea primitivă și greoaie, dar în practică nu se face niciodată o tratare manuală (de tip \texttt{case}): toate operațiile OOP „clasice” sunt abstractizate printr-un set de funcțtii incluse în biblioteca standard a limbajului.
+\section{Programarea bazată pe prototipuri}
 
-\section{Crearea prototipurilor}
+Bonsai implementează un model foarte simplu de programare bazată pe prototipuri\cite{prototype_based_programming} inspirat din JavaScript, spre deosebire de programarea bazată pe clase, utilizată in majoritatea limbajelor. Într-un model OOP bazat pe prototipuri, obiectele noi sunt create prin clonarea unor obiecte existente și moștenirea comportamentului acestora. Conceptul de „clasă” nu există, deși unele obiecte pot fi definite pentru a funcționa într-un mod similar.
 
-\draft{TODO}
+\section{Crearea prototipurilor în Bonsai}
 
-\section{Clonarea instanțelor noi din prototipuri}
+Prototipul din care moștenesc toate obiectele din bonsai este conținut în contextul rădăcină în variabila \c{object}. Acesta are standard definește variabila \c{object}, de tipul \c{BonsaiPrototypeFunction}, care reprezinta 
 
-\draft{Metoda \texttt{clone}}
+\section{Principiile OOP în programarea bazată pe prototipuri}
 
-\section{Încapsularea}
+\subsection{Moșteneria}
+
+\subsection{Încapsularea}
 
 \draft{TODO: convenția \texttt{\_}, similar Python}
 
-\section{Polimormism?}
+\subsection{Polimormism?}
 
 \draft{Limbaj dinamic = polimorfism implicit (?)}
 
@@ -725,27 +758,107 @@ Tratarea mesajelor în acest fel poate părea primitivă și greoaie, dar în pr
 \chapter{Integrarea cu platforma .NET}\label{ch:IntegratingWithDotNet}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Unul din principale avantajele în utilizarea runtime-ului .NET este posibilitatea de a folosi bibliotecile disponibile, atât oficiale cât și particulare. Bonsai dispune de un set de primitive care fac acest lucru posibil.
+Unul din principale avantajele în utilizarea runtime-ului .NET este posibilitatea de a folosi bibliotecile disponibile. În secțiunea \ref{sec:invoking_clr_members} a fost descris modul în care sunt tratate apelurile către instanțe ale claselor din CLR, dar nu s-a menționat nimic despre metode și proprietăți statice sau despre încărcarea bibliotecilor. Acest capitol descrie funcțiile standard care acoperă aceste cazuri.
 
-\draft{TODO}
+\section{Încărcarea bibliotecilor}
+
+Înainte de a putea importa și utiliza tipurile din ea, o bibliotecă .NET trebuie încărcată în runtime-ul .NET folosind una dintre cele doua funcții din Bonsai:
+
+\subsection{Funcția \c{loadAssembly}}
+
+Funcția \c{loadAssembly} primește ca unic parametru numele complet al unei biblioteci .NET:
+\begin{code}
+loadAssembly "System.Drawing, Version=2.0.0.0, Culture=neutral, 
+              PublicKeyToken=b03f5f7f11d50a3a"
+\end{code}
+\c{loadAssembly} poate fi folosită pentru încărcarea unui assembly standard din .NET Framework, cum ar fi \c{System.Data.dll}, sau orice altă bibliotecă din GAC (global assembly cache).
+
+\subsection{Funcția \c{loadAssemblyFile}}
+Funcția \c{loadAssemblyFile} primește de asemenea un singur parametru, calea către un fișier \c{.dll} sau \c{.exe} care reprezintă biblioteca ce se dorește a fi încărcată:
+\begin{code}
+loadAssemblyFile ".\\Lib\\MyLibrary.dll"
+\end{code}
+\c{loadAssembly} poate fi utilizată pentru încărcarea unui assembly non-standard, precum module proprii sau alte biblioteci open-source.
 
 \section{Funcția \c{import}}
 
-\section{Spații de nume și clase statice}
+Funcția \c{import} este folosită pentru importul spațiilor de nume și al claselor și are prototipul:
+\begin{code}
+defun .import .alias .typeName { ... }
+\end{code}
+Parametrului \c{typeName} acceptă ca valoare string-uri sau simboluri. Funcția \c{import} încearcă mai întâi să găsească o clasă cu același nume, apoi, în cazul în care căutarea a eșuat, consideră că apelul reprezintă importul unui spațiu de nume.
 
-\section{Instanțierea obiectelor}
+\subsection{Importul claselor}
 
-\section{Pasarea funcțiilor Bonsai către metode .NET}
+Vom considera întâi cazul în care parametrul \c{typeName} conține numele unei clase. În acest caz se va crea o nouă instanță a clasei \c{BonsaiClrClassFunction} care va fi salvată într-o variabilă din contextul curent. Numele variabilei este specificat prin parametrul \c{alias}. 
+
+Clasa \c{BonsaiClrClassFunction} implementează o funcție specifică Bonsai care redirectează toate apelurile proprii către membri statici ai unei clase CLR, similar modului în care binder-ul \c{BonsaiBinder} redirectează apelurile dinamice către membrii instanțelor de obiecte CLR: Primul parametru din apel este un simbol care reprezintă o proprietate sau o metodă statică, în timp ce restul argumentelor sunt considerate valori ale parametrilor acesteia. 
+
+Mecanismul de căutare a membrilor este analog celui descris în secțiunea \ref{sec:invoking_clr_members}.
+
+Fragmentul următor de cod oferă câțeva exemple de utilizare:
+\begin{code}
+\# clasa System.Environment este importata in variabila env
+import .env .System.Environment
+# apel al proprietatii statice CurrentDirectory
+env .CurrentDirectory
+  -> "C:\Users\Eugen\Projects"
+# apel al metodei statice GetEnvironmentVariable
+env .GetEnvironmentVariable "SYSTEMROOT"
+  -> "C:\Windows"
+\end{code}
+
+\subsection{Instanțierea obiectelor}
+
+Pe lângă invocarea proprietăților și metodelor statice, clasa \c{BonsaiClrClassFunction} implementează în plus următorul caz particular: dacă primul parametru conține simbolul \c{.new}, atunci se consideră că apelul reprezintă invocarea unui constructor. Regulile de potrivire a argumentelor peste metode CLR rămân aceleași, căutarea având loc în schimb pe lista de constructori ai clasei.
+
+Exemplu de instanțiere a clasei \c{ArrayList}:
+\begin{code}
+import .arraylist .System.Collections.ArrayList
+# instantiaza un nou ArrayList in variabila l
+= .l (list .new)
+l .GetType
+  -> System.Collections.ArrayList
+\end{code}
+
+\subsection{Importul spațiilor de nume}
+
+Dacă funcția \c{import} nu găsește nici o clasă cu numele specificat în argumentul \c{typeName}, atunci apelul este considerat importul unui spațiu de nume. O instanță a clasei \c{BonsaiClrNamespaceFunction} este creată și salvată în contextul curent, într-o variabilă cu numele specificat de argumentul \c{alias}.
+
+Clasa \c{BonsaiClrNamespaceFunction} este o funcție specifică Bonsai care reprezintă un spațiu de nume. Unicul parametru acceptat este un simbol. În momentul apelării, o clasă cu numele specificat în argument este căutată în spațiul de nume asociat, iar o nouă instanță de \c{BonsaiClrClassFunction} este creată din această clasă.
+
+Importul separat al unui spațiu de nume este util în cazul în care mai multe clase din același namespace sunt necesare. Un exemplu ar fi importul mai multor tipuri de colecții din \c{System.Collections}:
+\begin{code}
+\# importul spatiului de nume 
+import .collections .System.Collections
+# importul clasei ArrayList
+= arraylist (collections .ArrayList)
+# importul clasei HashTable
+= hashtable (collections .HashTable)
+# import clasei Stack
+= stack (collections .Stack)
+\end{code}
+
+Utilizarea claselor importate din spațiul de nume se face exact ca în cazul claselor importate direct:
+\begin{code}
+= .arr (arraylist .new)
+arr .Add 10
+= .table (hashtable .new)
+table .Add 1 "monday"
+table .Add 2 "tuesday"
+\end{code}
+
+% TODO: Does this section make sense? \section{Pasarea funcțiilor Bonsai către metode .NET}
 
 \section{Integrarea cu alte limbaje dinamice}
+
+\draft{TODO}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Posibile îmbunătățiri}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Module}
-
-\section{Spații de nume}
 
 \section{Metaprogramare}
 
@@ -760,8 +873,6 @@ Unul din principale avantajele în utilizarea runtime-ului .NET este posibilitat
 \draft{posibilități de realizare a unui debugger; integrarea cu VisualStudio?}
 
 \section{Îmbunătățirea performanței}
-
-\section{Tratarea excepțiilor}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
