object .method now accepts parameters; added some more tests for prototypes

--- a/doc/bonsai.bib
+++ b/doc/bonsai.bib
@@ -122,3 +122,8 @@ note = "\url{http://msdn.microsoft.com/en-us/library/bb397951.aspx}"
 title = "Wikipedia - Prototype-based Programming",
 note = "\url{http://en.wikipedia.org/wiki/Prototype-based_programming}"
 }
+
+@misc { python_classes,
+title = "Python Classes - Private Variables",
+note = "\url{http://docs.python.org/tutorial/classes.html#private-variables}"
+}
